Fix whitespace

--- a/inline.css
+++ b/inline.css
@@ -5,4 +5,6 @@ code.blocks {
 .blocks {
 	border: none;
 	background-color: inherit;
+	overflow-x: auto;
+	overflow-y: hidden;
 }
